--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
                 <div class="card-body">
                   <span class="d-block p-3"><strong>5908 likes</strong></span>
                   <p class="card-text p-3">
-                    </p>
-                  </p>
+                    This is my boyfriend, John. We have been together for 5 years and we are very happy together. He is my best friend and I love him very much. We enjoy spending time together and going on adventures. He is the love of my life and I am so grateful to have him in my life. #love #couple #forever #happy</p>
                 </div>
               </div>
             </div>
